<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals name="tracks_count">
        <item quantity="zero">%d tracks</item>
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>

    <string name="app_name">Yamus</string>
    <string name="search_hint">Track, album, artist</string>
    <string name="skip_back_10s">Skip back 10s</string>
    <string name="skip_forward_10s">Skip forward 10s</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="menu_music_queue">Queue</string>
    <string name="album_art_alt">Album art</string>

    <!-- Main Activity -->
    <!-- bottom menu -->
    <string name="duration_unknown">--:--</string>
    <string name="duration_format">%d:%02d</string>
    <string name="title_home">Home</string>

    <!-- Login Activity -->
    <string name="title_my_music">My Music</string>
    <string name="title_player">Player</string>
    <string name="login_activity_header">Yandex</string>
    <string name="login_activity_subheader">Войдите, чтобы продолжить</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Username or Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Home Fragment -->
    <!-- Playlists Fragment -->
    <string name="personal_playlist_subtitle">Updated %1$s</string>


    <!-- Stations -->
    <string name="mixes">Mixes</string>
    <string name="card_title_liked_tracks">My favorites</string>
    <string name="title_stations">Stations</string>
    <string name="stations_tab_recommended">Recommended</string>
    <string name="stations_tab_activity">Activity</string>
    <string name="stations_tab_mood">Mood</string>
    <string name="stations_tab_genre">Genre</string>
    <string name="stations_tab_era">Era</string>
    <string name="stations_tab_other">Other</string>


    <!-- My Music Fragment -->
    <string name="menu_profile_logout">Logout</string>
    <string name="my_music_list_playlists">Playlists</string>
    <string name="my_music_list_albums">Albums</string>
    <string name="my_music_list_artists">Artists</string>
    <string name="my_music_list_dislikes">Disliked tracks</string>
    <string name="my_music_playlists_title">My playlists</string>


    <!-- Search Fragment -->
    <string name="title_search">Search</string>


    <!-- Profile Fragment -->
    <string name="title_profile">Profile</string>
    <string name="profile_subscription_title">Yandex Music subscription</string>
    <string name="profile_subscription_not_available">Not active</string>
    <string name="profile_subscription_until">active until %1$s</string>


    <string name="title_playlists">Playlists</string>


    <!-- Playlist Fragment -->
    <string name="download_tracks">Download tracks</string>
    <string name="stations_catalog">Station catalog</string>
    <string name="title_playlist">Playlist</string>
    <string name="content_description_explicit">Explicit Content</string>
    <string name="track_menu_action_like_add">Add to liked</string>
    <string name="track_menu_action_like_remove">Remove from liked</string>
    <string name="track_menu_action_dislike_add">Dislike</string>
    <string name="track_menu_action_dislike_remove">Remove from disliked</string>
    <string name="track_menu_action_download">Download</string>

    <!-- Menu -->
    <!-- Menu Main -->
    <string name="menu_main_search">Music Search</string>
    <string name="menu_main_profile">Profile</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_close">Close app</string>

    <!-- PERMISSIONS -->
    <string name="permission_write_external_storage_title">Write External Storage permission necessary</string>
    <string name="permission_write_external_storage_description">Write External Storage permission allows Yamus to save tracks on the device for offline listening</string>

    <!-- SETTINGS -->
    <string name="title_activity_settings">Settings</string>
    <string name="please_wait">Please wait…</string>

    <!-- Preference Playback -->
    <string name="pref_header_playback">Playback</string>
    <string name="pref_title_shuffle_mode">Shuffle mode by default</string>
    <string name="pref_summary_on_shuffle_mode">Play tracks in random order</string>
    <string name="pref_summary_off_shuffle_mode">Play tracks sequentially</string>
    <string name="pref_title_repeat_mode">Repeat mode by default</string>
    <string name="pref_summary_on_repeat_mode">Loop all tracks</string>
    <string name="pref_summary_off_repeat_mode">Stop playback at the end of the playlist</string>
    <string name="pref_title_online_quality">Online tracks quality</string>
    <string name="pref_default_online_quality" translatable="false">192|aac</string>

    <!-- Preference Cache -->
    <string name="pref_header_cache">Offline mode</string>
    <string name="pref_title_cached_tracks_path">Cached tracks path</string>
    <string name="pref_title_clear_cache">Delete downloaded tracks</string>
    <string name="pref_summary_clear_cache">Downloaded tracks: %1$d\nSpace used: %2$s</string>
    <string name="pref_summary_cache_cleared">All files deleted successfully</string>
    <string name="pref_title_dialog_clear_cache">Delete all saved tracks?</string>
    <string name="pref_summary_dialog_clear_cache">Are you sure you want to delete all saved tracks?</string>
    <string name="pref_title_cache_quality">Downloadable tracks quality</string>
    <string name="pref_default_cache_quality" translatable="false">192|aac</string>

    <!-- Preference Android Auto Interface -->
    <string name="pref_header_aa_interface">Android Auto interface</string>
    <string name="pref_title_show_playlist_items">Display playlist tracks</string>
    <string name="pref_summary_on_show_playlist_items">Selecting a playlist will show the tracks</string>
    <string name="pref_summary_off_show_playlist_items">When you select a playlist, playback will start automatically</string>
    <string name="pref_title_like_alter_position">Show &quot;Like&quot; on main screen</string>
    <string name="pref_summary_on_like_alter_position">&quot;Like&quot; button will be located instead of &quot;Previous track&quot;</string>
    <string name="pref_summary_off_like_alter_position">&quot;Like&quot; button will be located by default</string>
    <string name="pref_title_dislike_alter_position">Show &quot;Dislike&quot; on main screen</string>
    <string name="pref_summary_on_dislike_alter_position">&quot;Dislike&quot; button will be located instead of &quot;Next track&quot;</string>
    <string name="pref_summary_off_dislike_alter_position">&quot;Dislike&quot; button will be located by default</string>
    <string name="pref_title_show_shuffle">Display &quot;Shuffle mode&quot;</string>
    <string name="pref_summary_on_show_shuffle">Shuffle mode button is displayed</string>
    <string name="pref_summary_off_show_shuffle">Shuffle mode button is hidden</string>
    <string name="pref_title_show_repeat">Display &quot;Repeat mode&quot;</string>
    <string name="pref_summary_on_show_repeat">Repeat mode button is displayed</string>
    <string name="pref_summary_off_show_repeat">Repeat mode button is hidden</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="auth_error_wrong_username_or_password">Wrong username or password</string>
    <string name="auth_error_server_error">Server error: %1$d</string>

</resources>
