<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_header_playback">

        <SwitchPreferenceCompat
            app:key="shuffle_mode"
            app:defaultValue="@bool/pref_default_shuffle_mode"
            app:summaryOff="@string/pref_summary_off_shuffle_mode"
            app:summaryOn="@string/pref_summary_on_shuffle_mode"
            app:title="@string/pref_title_shuffle_mode" />

        <SwitchPreferenceCompat
            app:key="repeat_mode"
            app:defaultValue="@bool/pref_default_repeat_mode"
            app:summaryOff="@string/pref_summary_off_repeat_mode"
            app:summaryOn="@string/pref_summary_on_repeat_mode"
            app:title="@string/pref_title_repeat_mode" />

        <ListPreference
            app:key="online_quality"
            app:defaultValue="@string/pref_default_online_quality"
            app:entries="@array/quality_entries"
            app:entryValues="@array/quality_values"
            app:title="@string/pref_title_online_quality"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_header_cache">

        <Preference
            app:key="clear_cache"
            app:title="@string/pref_title_clear_cache" />

        <ListPreference
            app:key="cache_quality"
            app:defaultValue="@string/pref_default_cache_quality"
            app:entries="@array/quality_entries"
            app:entryValues="@array/quality_values"
            app:title="@string/pref_title_cache_quality"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Интерфейс Android Auto">

        <SwitchPreferenceCompat
            app:key="show_shuffle"
            app:defaultValue="@bool/pref_default_show_shuffle"
            app:summaryOff="Кнопка управления режимом случайного воспроизведения скрыта"
            app:summaryOn="Кнопка управления режимом случайного воспроизведения будет отображаться"
            app:title="Отображать &quot;Случайный порядок&quot;" />

        <SwitchPreferenceCompat
            app:key="show_repeat"
            app:defaultValue="@bool/pref_default_show_repeat"
            app:summaryOff="Кнопка управления режимом повторного воспроизведения скрыта"
            app:summaryOn="Кнопка управления режимом повторного воспроизведения будет отображаться"
            app:title="Отображать &quot;Повторное воспроизведение&quot;" />

    </PreferenceCategory>



</PreferenceScreen>
