<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/like_add"
        android:icon="@drawable/ic_favorite_border"
        android:title="@string/track_menu_action_like_add" />

    <item
        android:id="@+id/like_remove"
        android:icon="@drawable/ic_favorite"
        android:title="@string/track_menu_action_like_remove" />

    <item
        android:id="@+id/dislike_add"
        android:icon="@drawable/ic_thumb_down"
        android:title="@string/track_menu_action_dislike_add" />

    <item
        android:id="@+id/dislike_remove"
        android:icon="@drawable/ic_thumb_up"
        android:title="@string/track_menu_action_dislike_remove" />

    <item
        android:id="@+id/download"
        android:icon="@drawable/ic_file_download"
        android:title="@string/track_menu_action_download" />
</menu>
